modified notebook file

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5,10 +5,8 @@
    "id": "dd7dd1af",
    "metadata": {},
    "source": [
-    "# Setting up the Project\n",
-    "- import the necessary libaries\n",
-    "- load the json file (which is the DataForSEO API results)\n",
-    "- create dataframe"
+    "# ABOUT NOTEBOOK\n",
+    "This notebook was the initial code when I developed this app from scratch. It's left here for pure nostalgia purposes only."
    ]
   },
   {
@@ -36,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "368f02c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load json file\n",
-    "with open('7. visrating/visrating.json', 'r', encoding='utf-8', errors='replace') as file:\n",
+    "with open('file.json', 'r', encoding='utf-8', errors='replace') as file:\n",
     "    data = json.load(file)  # Load the outer array"
    ]
   },
